--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="text_settings_auspiciadores">Auspiciadores</string>
     <string name="text_settings_comodin">Comodines</string>
 
+    <string name="text_settings_video">Videos</string>
+
 </resources>
